--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: ubuntu-ui-toolkit
 Priority: optional
 Section: libs
-Maintainer: Ubuntu Developers <ubuntu-devel-discuss@lists.ubuntu.com>
+Maintainer: Adam Boardman <adamboardman@gmail.com>
 Build-Depends: accountsservice,
                dbus,
                dbus-test-runner,
@@ -46,11 +46,10 @@ Build-Depends: accountsservice,
                qml-module-qttest,
                qtbase5-dev,
                qtbase5-private-dev,
-               qtdeclarative5-dev (>= 5.4.1-1ubuntu11~overlay3),
+               qtdeclarative5-dev,
                qtdeclarative5-dev-tools,
                qtdeclarative5-doc-html,
                qtdeclarative5-private-dev,
-               qtdeclarative5-unity-action-plugin (>= 1.1.0),
                qtmultimedia5-doc-html,
                qtpim5-dev,
                qtscript5-doc-html,
@@ -58,13 +57,11 @@ Build-Depends: accountsservice,
                qtsystems5-dev,
                qttools5-dev-tools,
                qtwebkit5-doc-html,
-               suru-icon-theme (>= 14.04+16.10.20160720),
-               unity-action-doc,
                uuid-runtime,
                xvfb,
 Standards-Version: 3.9.7
-Homepage: https://launchpad.net/ubuntu-ui-toolkit
-Vcs-Bzr: https://code.launchpad.net/~ubuntu-sdk-team/ubuntu-ui-toolkit/trunk
+Homepage: https://github.com/gemian/ubuntu-ui-toolkit
+Vcs-Git: https://github.com/gemian/ubuntu-ui-toolkit.git
 
 Package: qml-module-ubuntu-components
 Architecture: any
@@ -82,9 +79,6 @@ Depends: libqt5svg5,
          qml-module-qtquick2,
          qml-module-ubuntu-components-labs,
          qml-module-ubuntu-performancemetrics,
-         qtdeclarative5-unity-action-plugin (>= 1.1.0),
-         suru-icon-theme (>= 14.04+16.10.20160720),
-         ttf-ubuntu-font-family,
          ubuntu-ui-toolkit-theme (= ${binary:Version}),
          ${misc:Depends},
          ${shlibs:Depends},
@@ -115,9 +109,6 @@ Depends: libqt5svg5,
          qml-module-qtquick-window2,
          qml-module-qtquick2,
          qml-module-ubuntu-performancemetrics,
-         qtdeclarative5-unity-action-plugin (>= 1.1.0),
-         suru-icon-theme,
-         ttf-ubuntu-font-family,
          ubuntu-ui-toolkit-theme (= ${binary:Version}),
          ${misc:Depends},
          ${shlibs:Depends},
